--- a/www/css/index.css
+++ b/www/css/index.css
@@ -59,6 +59,18 @@ body {
                                    /* offset horizontal: half of text area width */
 }
 
+.button {
+     border-radius:4px;
+    -webkit-border-radius:4px;
+    color:#FFFFFF;
+    font-size:12px;
+    margin:0px 30px;
+    padding:2px 0px;
+    cursor: pointer;
+     background-color:#333333;
+       
+}
+
 /* Landscape layout (with min-width) */
 @media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
     .app {
